# basic-rs

./: .gitignore  Cargo.toml  README.md  a.out
src/: ast.rs  error.rs  format.rs  interpreter.rs  lib.rs  main.rs  parser.rs  parser2.rs
tests/: integration.rs  p0001.rs
tests/suite/: P020.BAS  P029.eok  P035.eok  P036.eok  P052.eok  P053.eok  P054.eok  P074.eok  P075.eok  P076.eok  P077.eok  P077.ok  P078.eok  P109.in  P109.ok  P115.ok  P130.BAS  P130.ok  P173.ok  P177.eok  README.md
wasm/: Cargo.toml  Makefile
wasm/src/: lib.rs
wasm/webapp/: app.tmpl.js  index.html  serve.py
