[package]
name = "basic"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>", "jeschkies <k@jeschkies.xyz>"]
edition = "2018"

[dependencies]
nom = "4.2.3"
nom_locate = "0.3.1"
itertools = "0.8.0"
rand = "0.6.5"
rand_xorshift = "0.1.1"

[dev-dependencies]
diff = "0.1.11"

[workspace]
members = ["wasm"]
